Remove deprecated constructors